--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
      crossorigin="anonymous"
       referrerpolicy="no-referrer" />
 </head>
-<body>
+<body onload="loadInitialData()">
     <!-- mobile screen button -->
     <div class="all_new_btn_only_mobile">
     <button 
@@ -104,7 +104,7 @@
           data-bs-dismiss="modal">Close</button>
           <button 
           type="button" 
-          class="btn btn-primary">Save changes</button>
+          class="btn btn-primary" onclick="handleSubmit()">Save changes</button>
         </div>
       </div>
     </div>
@@ -112,13 +112,6 @@
 
 <!-- Show task  Modal -->
 
-<!-- <button 
-type="button" 
-class="btn btn-primary" 
-data-bs-toggle="modal" 
-data-bs-target="#showTask">
-  Launch demo modal
-</button> -->
 
 <div 
 class="modal fade" 
@@ -190,7 +183,8 @@ aria-hidden="true">
               class="form-control"
               placeholder="Search your task here."
               aria-label="Username"
-              aria-describedby="addon-wrapping"
+              aria-describedby="addon-wrapping" 
+              oninput="searchTask.apply(this, arguments)"
                />
               <span class="input-group-text" id="addon-wrapping">
                 <i class="fas fa-search"></i>
@@ -217,5 +211,8 @@ aria-hidden="true">
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" 
   integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" 
   crossorigin="anonymous"></script> 
+
+  
+
 </body>
 </html>
